// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game /> renders properly 1`] = `
<DndProvider
  backend={[Function]}
>
  <Center
    margin="50px"
  >
    <Stack
      alignItems={
        {
          "base": "center",
          "lg": "start",
        }
      }
      direction={
        {
          "base": "column",
          "lg": "row",
        }
      }
      justifyContent="center"
      spacing={8}
    >
      <Stack>
        <Text
          textAlign="center"
        >
          Your board and hand:
        </Text>
        <HStack>
          <Board
            board={
              [
                [
                  null,
                ],
              ]
            }
          />
          <Hand
            hand={[]}
          />
        </HStack>
      </Stack>
      <Stack
        direction={
          {
            "base": "row",
            "lg": "column",
          }
        }
        flex="1"
      >
        <Stack>
          <Text
            textAlign="center"
          >
            Tiles remaining in bunch: 
            0
          </Text>
          <PeelButton
            canPeel={false}
            handlePeel={[MockFunction handlePeel]}
            peelWinsGame={true}
          />
          <Dump />
        </Stack>
      </Stack>
    </Stack>
  </Center>
</DndProvider>
`;

exports[`<Game /> renders properly with more than one active player 1`] = `
<DndProvider
  backend={[Function]}
>
  <Center
    margin="50px"
  >
    <Stack
      alignItems={
        {
          "base": "center",
          "lg": "start",
        }
      }
      direction={
        {
          "base": "column",
          "lg": "row",
        }
      }
      justifyContent="center"
      spacing={8}
    >
      <Stack>
        <Text
          textAlign="center"
        >
          Your board and hand:
        </Text>
        <HStack>
          <Board
            board={
              [
                [
                  null,
                ],
              ]
            }
          />
          <Hand
            hand={[]}
          />
        </HStack>
      </Stack>
      <Stack
        direction={
          {
            "base": "row",
            "lg": "column",
          }
        }
        flex="1"
      >
        <Stack>
          <Text
            textAlign="center"
          >
            Tiles remaining in bunch: 
            0
          </Text>
          <PeelButton
            canPeel={false}
            handlePeel={[MockFunction handlePeel]}
            peelWinsGame={true}
          />
          <Dump />
        </Stack>
        <Stack>
          <Text
            textAlign="center"
          >
            Opponent board(s):
          </Text>
          <OpponentBoardPreview
            players={
              [
                {
                  "board": [
                    [
                      null,
                    ],
                  ],
                  "gamesWon": 0,
                  "hand": [],
                  "isAdmin": false,
                  "isTopBanana": false,
                  "status": "READY",
                  "userId": "id",
                  "username": "username",
                },
                {
                  "board": [
                    [
                      null,
                    ],
                  ],
                  "gamesWon": 0,
                  "hand": [],
                  "isAdmin": false,
                  "isTopBanana": false,
                  "status": "READY",
                  "userId": "other",
                  "username": "username",
                },
              ]
            }
          />
        </Stack>
      </Stack>
    </Stack>
  </Center>
</DndProvider>
`;
